# python-daemonizer

./: .buildinfo  .coveragerc  .gitchangelog.rc  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.html  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README  README.html  README.markdown  README.rst  REUSE.toml  daemon.py  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject-daemonizer.spec  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  test_daemon.py  tox.ini  toxfile.py
.github/: dependabot.yml
.github/workflows/: autobot.yml  bandit.yml  ci.yml  containers.yml  coverage.yml  pylint.yml  release.yml  rpmdev.yml  rpms.yml  sphinx.yml  wheels.yml
_modules/: daemon.html  daemonizer.html  index.html
_modules/daemon/: parent_logger.html
_modules/daemonizer/: parent_logger.html
_sources/: CHANGELOG.rst.txt  README.rst.txt  index.rst.txt
_sources/api/: daemon.parent_logger.rst.txt  daemon.rst.txt  daemonizer.parent_logger.rst.txt  daemonizer.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: daemon.html  daemon.parent_logger.html  daemonizer.html  daemonizer.parent_logger.html  modules.html
daemon/: __init__.py  parent_logger.py  settings.py  timezone.py
docs/source/: conf.py  index.rst
packaging/el9/: daemonizer.spec
src/daemonizer/: __init__.py  parent_logger.py
test/: settings.py  test_daemon.py  test_daemon_quiet.py
