[metadata]
name = daemonizer
version = attr: daemon.__version__
description = Python daemonizer for Unix, Linux and OS X
url = https://github.com/sarnold/python-daemonizer
author = Server Density
maintainer = Stephen L Arnold
maintainer_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license_expression = CC-BY-SA-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: No Input/Output (Daemon)
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries

keywords =
    daemon

[options]
python_requires = >= 3.6
install_requires =

packages = find:
zip_safe = True

[options.packages.find]
exclude =
    examples*
    scripts*
    docs*
    test*

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
events =
    gevent
    eventlet
doc =
    sphinx
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(events)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 96
