[metadata]
name = daemonizer
version = attr: setuptools_scm.get_version
description = Python daemonizer for Unix, Linux and OS X
url = https://github.com/sarnold/python-daemonizer
author = Stephen L Arnold
author_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/x-rst
license_expression = CC-BY-SA-3.0
license_files = LICENSE
license = CC-BY-SA-3.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Environment :: No Input/Output (Daemon)
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries

keywords =
    daemon
    daemonize
    server

[options]
python_requires = >= 3.6

setup_requires =
    setuptools_scm[toml]

install_requires =

package_dir =
    =src
packages = find_namespace:
zip_safe = True

[options.packages.find]
where = src

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
events =
    gevent
    eventlet
dev =
    flake8
    isort
    mypy
    black
    pylint
    pylint-per-file-ignores
doc =
    sphinx
    sphinx_git
    sphinx_rtd_theme<3.0.0
    sphinxcontrib-apidoc
    myst-parser
    sphinx-nefertiti
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(events)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[pylint.MESSAGES CONTROL]
per-file-ignores =
    _version.py:C0114,C0103
